Fix alignment of prefs buttons in standard and cologneblue

--- a/skins/common/oldshared.css
+++ b/skins/common/oldshared.css
@@ -159,7 +159,7 @@ img { border: none; }
     display: block;
     color: #005189;
 }
-#prefcontrol {
+.mw-prefs-buttons {
     clear: left;
     float: left;
     margin-top: 1em;
